# rdf-fusion

./: .dockerignore  .gitignore  .gitmodules  .mailmap  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  clippy.toml  deny.toml  justfile  rustfmt.toml
bench/: Cargo.toml  README.md
bench/bench_files/bsbm_queries/: README.md  businessIntelligence-1000.csv.bz2  businessIntelligence-10000.csv.bz2  businessIntelligence-100000.csv.bz2  businessIntelligence-2500.csv.bz2  businessIntelligence-25000.csv.bz2  businessIntelligence-250000.csv.bz2  businessIntelligence-5000.csv.bz2  businessIntelligence-50000.csv.bz2  businessIntelligence-500000.csv.bz2  businessIntelligence-7500.csv.bz2  businessIntelligence-75000.csv.bz2  explore-1000.csv.bz2  explore-10000.csv.bz2  explore-100000.csv.bz2  explore-2500.csv.bz2  explore-25000.csv.bz2  explore-250000.csv.bz2  explore-5000.csv.bz2  explore-50000.csv.bz2  explore-500000.csv.bz2  explore-7500.csv.bz2  explore-75000.csv.bz2  exploreAndUpdate-1000.csv.bz2  exploreAndUpdate-10000.csv.bz2  exploreAndUpdate-100000.csv.bz2  exploreAndUpdate-2500.csv.bz2  exploreAndUpdate-25000.csv.bz2  exploreAndUpdate-250000.csv.bz2  exploreAndUpdate-5000.csv.bz2  exploreAndUpdate-50000.csv.bz2  exploreAndUpdate-500000.csv.bz2  exploreAndUpdate-7500.csv.bz2  exploreAndUpdate-75000.csv.bz2
bench/benches/: bsbm.rs  bsbm_business_intelligence.rs  bsbm_explore.rs  ci_benches.rs  storage.rs  wind_farm.rs
bench/benches/utils/: mod.rs  verbose.rs
bench/src/: cli.rs  environment.rs  lib.rs  main.rs  operation.rs  operations.rs  report.rs
bench/src/benchmarks/: bsbm_explore.rs  mod.rs  name.rs
bench/src/benchmarks/bsbm/: benchmark.rs  business_intelligence.rs  explore.rs  mod.rs  operation.rs  report.rs  requirements.rs  use_case.rs
bench/src/benchmarks/windfarm/: benchmark.rs  mod.rs  queries.rs  report.rs
bench/src/prepare/: copy_file.rs  file_download.rs  mod.rs  requirement.rs  run_closure.rs  run_command.rs
bench/src/prepare/actions/: mod.rs  unpack.rs
bench/src/results/: benchmark_results.rs  mod.rs  run.rs
bench/src/runs/: mod.rs  run.rs  runs.rs  summary.rs
bench/src/utils/: flamegraph.rs  mod.rs
bench/tests/: mod.rs
bench/tests/plans/: bsbm_business_intelligence.rs  bsbm_explore.rs  mod.rs  wind_farm.rs
bench/tests/plans/snapshots/: r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Execution Plan).snap  r#mod__plans__bsbm_explore__BSBM Explore - Q1 (Initial).snap  (+96 more)
bench/tests/query_results/: bsbm.rs  mod.rs  windfarm.rs
cli/: Cargo.toml  README.md  build.rs
cli/src/: cli.rs  main.rs  service_description.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: sparql_query_eval.rs  sparql_update_eval.rs
lib/api/: Cargo.toml  README.md
lib/api/src/: context_view.rs  lib.rs
lib/arrow-rdf/: Cargo.toml
lib/arrow-rdf/src/: error.rs  lib.rs  result_collector.rs
lib/common/: Cargo.toml
lib/common/src/: blank_node_mode.rs  error.rs  lib.rs  object_id.rs  quad_storage.rs
lib/datamodel/: Cargo.toml
lib/datamodel/src/: error.rs  lib.rs  value.rs
lib/encoding/: Cargo.toml  README.md
lib/encoding/benches/: builders.rs
lib/encoding/src/: encoding.rs  encoding_name.rs  encodings.rs  error.rs  lib.rs  quad_storage_encoding.rs  scalar_encoder.rs
lib/engine/: Cargo.toml
lib/engine/src/: engine.rs  lib.rs  planner.rs  quad_storage.rs
lib/functions/: Cargo.toml  README.md
lib/functions-scalar/: Cargo.toml
lib/functions-scalar/src/: lib.rs  term_ops.rs  value_ops.rs
lib/functions/benches/: scalar.rs  scalar_binary.rs
lib/functions/src/: args.rs  factory.rs  lib.rs  name.rs  registry.rs  registry_builder.rs
lib/functions/tests/: unary.rs
lib/graphfusion/: Cargo.toml  README.md
lib/graphfusion-engine/: Cargo.toml
lib/graphfusion-engine/src/: engine.rs  error.rs  graph_name_iter.rs  lib.rs  quad_storage.rs  quad_stream.rs  result_stream.rs  triple_store.rs
lib/graphfusion-functions/: Cargo.toml
lib/graphfusion-functions-scalar/: Cargo.toml
lib/graphfusion-functions-scalar/src/: lib.rs  term_ops.rs  value_ops.rs
lib/graphfusion-functions/src/: lib.rs  registry.rs
lib/graphfusion-logical/: Cargo.toml
lib/graphfusion-logical/src/: lib.rs
lib/graphfusion-physical/: Cargo.toml
lib/graphfusion-physical/src/: lib.rs  planner.rs
lib/graphfusion-storage/: Cargo.toml
lib/graphfusion-store/: Cargo.toml
lib/graphfusion-store/src/: error.rs  lib.rs  triple_store.rs
lib/graphfusion-web/: Cargo.toml
lib/graphfusion-web/src/: config.rs  error.rs  lib.rs
lib/graphfusion/benches/: store.rs
lib/graphfusion/src/: error.rs  lib.rs  model.rs  results.rs  sparql.rs  store.rs
lib/graphfusion/tests/: store.rs
lib/logical/: Cargo.toml  README.md
lib/logical/src/: active_graph.rs  expr_builder.rs  expr_builder_context.rs  expr_builder_root.rs  lib.rs  logical_plan_builder.rs  logical_plan_builder_context.rs  system_columns.rs
lib/model/: Cargo.toml
lib/model/src/: blank_node_mode.rs  error.rs  lib.rs  object_id.rs  rdf_value.rs  rdf_value_arg.rs  typed_value.rs  value.rs  vocab.rs
lib/physical/: Cargo.toml  README.md
lib/physical/src/: lib.rs
lib/rdf-fusion/: .gitignore  Cargo.toml  README.md
lib/rdf-fusion/benches/: store.rs
lib/rdf-fusion/src/: error.rs  lib.rs  model.rs  results.rs  sparql.rs  store.rs
lib/rdf-fusion/tests/: store.rs
lib/storage/: Cargo.toml  README.md
lib/storage/src/: lib.rs
lib/storage/tests/: lib.rs  mem_quad_storage.rs  memory_quad_storage.rs  parquet_persistence.rs
lib/web/: Cargo.toml  README.md
lib/web/benches/: encode_results.rs
lib/web/src/: config.rs  error.rs  lib.rs  state.rs
testsuite/: Cargo.toml
testsuite/benches/: parser.rs
testsuite/rdf-fusion-tests/sparql/: complex_expression_in_order_by.rq  complex_expression_in_order_by.srx  complex_expression_in_order_by.ttl  manifest.ttl
testsuite/src/: evaluator.rs  files.rs  lib.rs  main.rs  manifest.rs  parser_evaluator.rs  report.rs  sparql_evaluator.rs  vocab.rs
testsuite/tests/: canonicalization.rs  oxigraph.rs  parser.rs  rdf_fusion.rs  serd.rs  sparql.rs
(+1027 files in other folders)
