[package]
name = "rdf-fusion-bench"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/tobixdev/rdf-fusion/tree/main/bench"
description = """
RdfFusion benchmarking tool
"""
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rdf-fusion-bench"
path = "src/main.rs"
doc = false

[dependencies]
tokio.workspace = true

[lints]
workspace = true


