[package]
name = "rdf-fusion-bench"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/tobixdev/rdf-fusion/tree/main/bench"
description = """
RdfFusion benchmarking tool
"""
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rdf-fusion-bench"
path = "src/main.rs"
doc = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bzip2.workspace = true
clap = { workspace = true, features = ["derive"] }
csv.workspace = true
futures.workspace = true
pprof = { workspace = true, features = ["flamegraph"] }
prettytable-rs.workspace = true
rdf-fusion.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
zip-extract.workspace = true

[lints]
workspace = true
