[package]
name = "graphfusion-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["RDF", "SPARQL", "graph-database", "database"]
categories = ["command-line-utilities", "database"]
repository = "https://github.com/tobixdev/graphfusion/tree/main/cli"
description = """
GraphFusion CLI tool and SPARQL HTTP server
"""
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "graphfusion"
path = "src/main.rs"
doc = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
graphfusion.workspace = true
graphfusion-web.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
predicates.workspace = true

[build-dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
clap_mangen.workspace = true

[lints]
workspace = true


