[package]
name = "oxigraph-testsuite"
version = "0.0.0"
authors.workspace = true
license.workspace = true
description = """
Implementation of W3C testsuites for Oxigraph
"""
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
graphfusion.workspace = true
oxrdf.workspace = true
oxttl.workspace = true
sparesults.workspace = true
text-diff.workspace = true
time = { workspace = true, features = ["formatting"] }
tokio.workspace = true

[dev-dependencies]
codspeed-criterion-compat.workspace = true

[lints]
workspace = true

[[bench]]
name = "parser"
harness = false
