[package]
name = "arrow-rdf"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
datafusion.workspace = true
datamodel.workspace = true
oxrdf.workspace = true
functions-scalar.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
