[package]
name = "arrow-rdf"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
model.workspace = true
datafusion.workspace = true
functions-scalar.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
