[package]
name = "arrow-rdf"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
arrow-rdf-functions.workspace = true
model.workspace = true
datafusion.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
