[package]
name = "rdf-fusion-common"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
datafusion.workspace = true
rdf-fusion-model.workspace = true
thiserror.workspace = true

[lints]
workspace = true
