[package]
name = "datamodel"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
oxiri.workspace = true
oxrdf.workspace = true
rand.workspace = true
regex.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
