[package]
name = "rdf-fusion-encoding"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rdf-fusion-common.workspace = true
rdf-fusion-model.workspace = true
datafusion.workspace = true

[dev-dependencies]
codspeed-criterion-compat = { workspace = true, features = ["async_tokio"] }

[lints]
workspace = true

[[bench]]
name = "builders"
harness = false