[package]
name = "rdf-fusion-encoding"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
RDF Fusion Term Encodings
"""

[dependencies]
rdf-fusion-model.workspace = true
dashmap.workspace = true
datafusion.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true

[lints]
workspace = true