[package]
name = "rdf-fusion-engine"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
datafusion.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-functions.workspace = true
rdf-fusion-model.workspace = true
futures.workspace = true
rdf-fusion-logical.workspace = true
rdf-fusion-physical.workspace = true
oxrdfio.workspace = true
spargebra.workspace = true
sparesults.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
