[package]
name = "functions-scalar"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
datamodel.workspace = true
rand.workspace = true
oxiri.workspace = true
oxrdf.workspace = true
regex = "1.11.1"
uuid = { version = "1.16.0", features = ["v4"] }

[lints]
workspace = true
