[package]
name = "functions-scalar"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
datamodel.workspace = true
hex.workspace = true
oxiri.workspace = true
oxrdf.workspace = true
md-5.workspace = true
rand.workspace = true
regex.workspace = true
sha1.workspace = true
sha2.workspace = true
uuid = { version = "1.16.0", features = ["v4"] }

[lints]
workspace = true
