[package]
name = "rdf-fusion-functions"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
datafusion.workspace = true
rdf-fusion-common.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-functions-scalar.workspace = true
rdf-fusion-model.workspace = true
itertools.workspace = true
spargebra.workspace = true

[lints]
workspace = true
