[package]
name = "rdf-fusion-functions"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
datafusion.workspace = true
rdf-fusion-common.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-model.workspace = true
itertools.workspace = true
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
rand.workspace = true
regex.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
codspeed-criterion-compat = { workspace = true, features = ["async_tokio"] }
tokio-test.workspace = true

[lints]
workspace = true

[[bench]]
name = "scalar"
harness = false