[package]
name = "graphfusion-logical"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
arrow-rdf.workspace = true
datafusion.workspace = true
oxrdf.workspace = true
spargebra = { workspace = true, features = ["rdf-star"] }

[lints]
workspace = true
