[package]
name = "graphfusion-physical"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
arrow-rdf.workspace = true
async-trait.workspace = true
datafusion.workspace = true
datamodel.workspace = true
futures.workspace = true
once_cell.workspace = true
oxiri.workspace = true
oxrdf.workspace = true
oxrdfio.workspace = true
spargebra = { workspace = true, features = ["rdf-star"] }
sparesults = { workspace = true, features = ["rdf-star"] }
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
