[package]
name = "graphfusion-physical"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
graphfusion-encoding.workspace = true
async-trait.workspace = true
datafusion.workspace = true
model.workspace = true
futures.workspace = true
graphfusion-logical.workspace = true

[lints]
workspace = true
