[package]
name = "graphfusion-storage"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# This should be removed in the future. Necessary for OxigraphMemory
oxsdatatypes = "0.2.2"
arrow-rdf.workspace = true
async-trait.workspace = true
model.workspace = true
datafusion.workspace = true
graphfusion-engine.workspace = true
dashmap.workspace = true
futures.workspace = true
rustc-hash.workspace = true
siphasher.workspace = true
thiserror.workspace = true

[lints]
workspace = true
