[package]
name = "graphfusion-store"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
arrow-rdf.workspace = true
async-trait.workspace = true
datamodel.workspace = true
datafusion.workspace = true
graphfusion-engine.workspace = true
dashmap.workspace = true
futures.workspace = true
oxrdf.workspace = true
oxsdatatypes.workspace = true
rustc-hash.workspace = true
siphasher.workspace = true
thiserror.workspace = true

[lints]
workspace = true
