[package]
name = "rdf-fusion-logical"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rdf-fusion-common.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-functions.workspace = true
datafusion.workspace = true
rdf-fusion-model.workspace = true
spargebra.workspace = true

[lints]
workspace = true
