[package]
name = "rdf-fusion-logical"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rdf-fusion-api.workspace = true
rdf-fusion-common.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-functions.workspace = true
datafusion.workspace = true
rdf-fusion-model.workspace = true

[dev-dependencies]
insta = { version = "1.39.0", features = ["redactions", "serde"] }

[lints]
workspace = true

[[test]]
name = "logical_plan"
path = "tests/logical_plan/mod.rs"
