[package]
name = "model"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Dependencies to oxigraph's data model. We re-export them in this crate if we rely on it. To avoid any other crates
# accidentally depending directly on oxiraph's data model, we do not include it in the workspace.
oxsdatatypes = "0.2.1"
oxiri = "0.2.8"
oxrdf = { version = "0.2.4", features = ["oxsdatatypes"] }

# Regular Dependencies
thiserror.workspace = true

[lints]
workspace = true
