[package]
name = "graphfusion-physical"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
datafusion.workspace = true
futures.workspace = true
graphfusion-encoding.workspace = true
graphfusion-model.workspace = true
graphfusion-logical.workspace = true
itertools.workspace = true

[lints]
workspace = true
