[package]
name = "rdf-fusion-physical"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
datafusion.workspace = true
futures.workspace = true
rdf-fusion-common.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-functions.workspace = true
rdf-fusion-model.workspace = true
rdf-fusion-logical.workspace = true
itertools.workspace = true

[lints]
workspace = true
