[package]
name = "rdf-fusion-storage"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
rdf-fusion-model.workspace = true
datafusion.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-engine.workspace = true
dashmap.workspace = true
futures.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true

[lints]
workspace = true
