[package]
name = "rdf-fusion-storage"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
rdf-fusion-api.workspace = true
rdf-fusion-common.workspace = true
rdf-fusion-model.workspace = true
datafusion.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-logical.workspace = true
dashmap.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
