[package]
name = "rdf-fusion-storage"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
RDF Fusion Storage Layers
"""

[dependencies]
async-trait.workspace = true
futures.workspace = true
itertools.workspace = true
rdf-fusion-extensions.workspace = true
rdf-fusion-model.workspace = true
datafusion.workspace = true
rdf-fusion-encoding.workspace = true
rdf-fusion-logical.workspace = true
dashmap.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
insta.workspace = true
rdf-fusion-functions.workspace = true

[lints]
workspace = true
