[package]
name = "rdf-fusion-web"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
futures.workspace = true
headers.workspace = true
headers-accept.workspace = true
mediatype.workspace = true
serde.workspace = true
thiserror.workspace = true
tower-http.workspace = true
tracing.workspace = true

rdf-fusion.workspace = true
tokio.workspace = true
anyhow.workspace = true

[lints]
workspace = true
